<resources>
    <string name="app_name">MACSRO</string>
    <string name="empty_username_message">Username must not be empty.</string>
    <string name="empty_password_message">Password must not be empty.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="invalid_email_message">Email must be a valid email address</string>
    <string name="password_not_confirmed_message">\'Confirm password\' text must be equal to password.</string>
    <string name="already_have_an_account">Already have an account?\ </string>
    <string name="don_t_have_an_account">"Don't have an account? "</string>
    <string name="fill_the_volunteer_data">Fill the volunteer data</string>
    <string name="name">Name</string>
    <string name="second_name">Second Name</string>
    <string name="surname">Surname</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="proceed_to_events">Proceed to events</string>
    <string name="name_must_not_be_empty">Name must not be empty.</string>
    <string name="second_name_must_not_be_empty">Second name must not be empty.</string>
    <string name="surname_must_not_be_empty">Surname must not be empty.</string>
    <string name="mobile_phone_must_not_be_empty">Mobile phone must not be empty.</string>
    <string name="mobile_phone_must_be_valid">Mobile phone must be valid.</string>
    <string name="volunteer_age_requirement">You must be at least 16 years old to be a volunteer.</string>
    <string name="username_taken_message">This username is already taken.</string>
    <string name="email_taken_message">This email is already taken.</string>
    <string name="birthdate_must_not_be_empty">Birthdate must not be empty.</string>
    <string name="open_location_in_maps">Open location in Maps</string>
    <string name="event_type_spinner_text">Type:</string>
    <string name="event_status_spinner_text">Status:</string>
    <string name="event_district_spinner_text">District:</string>
    <string name="filter_button_text">Filter</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="log_out_button_text">Log Out</string>
    <string name="settings">Settings</string>
    <string name="km">km</string>
    <string name="max_distance">Max distance:</string>
    <string name="notify_about_events_near_me">Notify about events near me (needs location)</string>
    <string name="get_notifications_for_events_in_districts">Get notifications for events in districts:</string>
    <string name="save">Save</string>
    <string name="i_have_saved_the_code">I have saved the code</string>
    <string name="enter_ga_code_text">Enter this code into Google Authenticator (or scan or click on the QR Code above):</string>
    <string name="ga_warning">WARNING: You will lose access to the account if you lose your Google Authenticator!</string>
    <string name="qr_code">QR Code</string>
    <string name="enter_google_authenticator_code">Enter Google Authenticator code</string>
    <string name="submit">Submit</string>
    <string name="let_coordinator_scan_qr_code">Let the coordinator scan this QR code to join the event</string>
    <string name="the_code_has_been_scanned">The code has been scanned</string>
    <string name="lock">Lock</string>
    <string name="click_to_join_the_event">Click to join the event</string>
    <string name="welcome_coordinator">Welcome, coordinator!</string>
    <string name="add_a_volunteer_to_the_event">Add a volunteer to the event</string>
    <string name="welcome_volunteer">Welcome, volunteer!</string>
    <string name="resources_needed">Resources needed:</string>
    <string name="your_group">Your group:\ </string>
    <string name="no_group_text">You have not been assigned to any group yet.</string>
    <string name="group_chat">Group chat</string>
    <string name="coordination_chat">Coordination chat</string>
    <string name="your_tasks">Your tasks:</string>
    <string name="event_groups">Event Groups:</string>
    <string name="event_tasks">Event tasks:</string>
    <string name="volunteers_rating">Volunteers Rating:</string>
    <string name="you">You:</string>
    <string name="rating">Rating</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="adjust_rating_points_for">Adjust rating points for %1$s</string>
    <string name="your_messaging_with_the_dispatcher">Your messaging with the dispatcher</string>
    <string name="text">Text:</string>
    <string name="read">Read</string>
    <string name="new_read">New/Read</string>
    <string name="requests">Requests</string>
    <string name="ingoing_outgoing">Ingoing/Outgoing</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="invalid_qr_code">Invalid QR code</string>
    <string name="volunteer_has_been_added_to_the_event_successfully">Volunteer has been added to the event successfully!</string>
    <string name="coordination" translatable="false">Coordination</string>
    <string name="from_dispatcher">From: Dispatcher</string>
    <string name="from_coordinator">From: Coordinator</string>
    <string name="to_dispatcher">To: Dispatcher</string>
    <string name="to_coordinator">To: Coordinator</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="new_events">New events</string>
    <string name="new_events_available">%1$d new events available.</string>
    <string name="logout">Logout</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_the_app">Exit the app</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="create_request">Create Request</string>
    <string name="failed_to_login">Failed to login. %1$s</string>
    <string name="failed_to_authenticate">Failed to authenticate. %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_updated_rating_for">Successfully updated rating for %1$s!</string>
    <string name="enter_your_text">Enter your text</string>
</resources>