<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.fragment.AddGoogleAuthenticatorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/qr_code_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/qr_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/enter_ga_code_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ga_secret_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="SOME_SECRET_HERE" />


        <Button
            android:id="@+id/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:enabled="false"
            android:text="@string/i_have_saved_the_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ga_warning"
            android:textAlignment="center"
            android:textColor="#FF0000"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>