<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.fragment.RequestsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_messaging_with_the_dispatcher"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/event_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="Event name" />

    <Switch
        android:id="@+id/show_read_switch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/new_read"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/show_outgoing_switch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ingoing_outgoing"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_messages_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/create_request_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="16dp"
        android:text="+"
        tools:ignore="HardcodedText" />

</LinearLayout>